--- a/index.ipynb
+++ b/index.ipynb
@@ -190,23 +190,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'madagascar'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "favorite_destination()\n",
+    "#favorite_destination()\n",
     "#travel_destinations[-1] # 'madagascar'"
    ]
   },
