--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for i in list(range(0, (len(travel_destinations))))\n",
+    "    for i in list(range(0, (len(travel_destinations)))\n",
     "        travel_destinations[i].title()\n",
     "        i += 1\n",
     "        \n",
