Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -219,24 +219,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-21-82ba617a2e2b>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-22-4799ed853250>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-82ba617a2e2b>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    for i in list(range(0, 6))\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-4799ed853250>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    for i in list(range(0, 6))\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
+    "list\n",
     "def capitalize_countries():\n",
     "    for i in list(range(0, 6))\n",
     "        travel_destinations[i].title()\n",
-    "        i += 1\n",
+    "        \n",
     "        \n",
     "    return travel_destinations"
    ]
