--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,7 @@
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "list\n",
+    "countries_indices = list(range(0,len(travel_destinations)))\n",
     "def capitalize_countries():\n",
     "    for i in list(range(0, 6))\n",
     "        travel_destinations[i].title()\n",
