--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
     "\n",
     "def capitalize_countries():\n",
     "    for i in countries_indices:\n",
-    "        travel_destinations[i].title()\n",
+    "        travel_destinations[i].upper()\n",
     "        \n",
     "        \n",
     "    return travel_destinations"
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
