Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
     "\n",
     "def capitalize_countries():\n",
     "    for i in countries_indices:\n",
-    "        travel_destinations[i].upper()\n",
+    "        travel_destinations.append()\n",
     "        \n",
     "        \n",
     "    return travel_destinations"
