--- a/index.ipynb
+++ b/index.ipynb
@@ -227,6 +227,7 @@
     "countries_indices = list(range(0,len(travel_destinations)))\n",
     "\n",
     "def capitalize_countries():\n",
+    "    capitilized_travel_destinations = []\n",
     "    for i in countries_indices:\n",
     "        travel_destinations.append()\n",
     "        \n",
